[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.3", features = ["derive"] }
env_logger = "0.11.5"
fontdue = "0.9.2"
guillotiere = "0.6.2"
image = "0.25.2"
log = "0.4.22"
lru = "0.12.4"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = "0.30.5"
