[package]
name = "rt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.3", features = ["derive"] }
cosmic-text = "0.12.1"
env_logger = "0.11.5"
etagere = "0.2.13"
fontdue = "0.9.2"
log = "0.4.22"
lru = "0.12.4"
pollster = "0.3.0"
portable-pty = "0.8.1"
rustc-hash = "2.0.0"
wgpu = "22.1.0"
winit = "0.30.5"
